kustomize/base/idm/secret-agent/idm-deployment.yaml
---
# Source: identity-platform/templates/idm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idm
  labels:
    helm.sh/chart: identity-platform-1.0.0
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/part-of: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
    app: idm
    app.kubernetes.io/component: idm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: identity-platform
      app.kubernetes.io/part-of: identity-platform
      app.kubernetes.io/instance: identity-platform
      app: idm
      app.kubernetes.io/component: idm
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: identity-platform
        app.kubernetes.io/part-of: identity-platform
        app.kubernetes.io/instance: identity-platform
        app: idm
        app.kubernetes.io/component: idm
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 0
        runAsUser: 11111
      volumes:
        - name: custom
          emptyDir: {}
        - name: fbc
          emptyDir: {}
        - name: idm-secrets
          secret:
            secretName: idm
        - name: truststore
          projected:
            sources:
              - secret:
                  name: ds-ssl-keypair
              - secret:
                  name: platform-truststore-certificates
                  optional: true
        - name: new-truststore
          emptyDir: {}
        - name: logs
          emptyDir: {}
        - name: audit-logs
          emptyDir: {}
        - name: idm-logback-xml
          configMap:
            name: idm-logback-xml
        - name: idm-logging-properties
          configMap:
            name: idm-logging-properties
        - name: idm-import-pem-certs
          configMap:
            name: idm-import-pem-certs
            defaultMode: 0755
        - name: idm-init-scripts
          configMap:
            name: idm-init-scripts
            defaultMode: 0755
      containers:
        - name: openidm
          securityContext: {}
          image: idm
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /openidm/info/ping
              port: http
              httpHeaders:
                - name: X-OpenIDM-Username
                  value: anonymous
                - name: X-OpenIDM-Password
                  value: anonymous
                - name: X-OpenIDM-NoSession
                  value: "true"
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /openidm/info/ping
              port: http
              httpHeaders:
                - name: X-OpenIDM-Username
                  value: anonymous
                - name: X-OpenIDM-Password
                  value: anonymous
                - name: X-OpenIDM-NoSession
                  value: "true"
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /openidm/info/ping
              port: http
              httpHeaders:
                - name: X-OpenIDM-Username
                  value: anonymous
                - name: X-OpenIDM-Password
                  value: anonymous
                - name: X-OpenIDM-NoSession
                  value: "true"
            failureThreshold: 40
            periodSeconds: 10
          resources:
            limits:
              memory: 1280Mi
            requests:
              cpu: 250m
              memory: 1280Mi
          volumeMounts:
            - mountPath: /var/run/secrets/idm
              name: idm-secrets
            - name: new-truststore
              mountPath: /opt/openidm/idmtruststore
              readOnly: true
              subPath: idmtruststore
            - mountPath: /opt/openidm/logs
              name: logs
            - mountPath: /opt/openidm/audit
              name: audit-logs
            - mountPath: /var/run/openidm/logging/logback
              name: idm-logback-xml
            - mountPath: /var/run/openidm/logging
              name: idm-logging-properties
            - name: fbc
              mountPath: /opt/openidm/conf
              subPath: conf
            - name: fbc
              mountPath: /opt/openidm/ui
              subPath: ui
            - name: fbc
              mountPath: /opt/openidm/script
              subPath: script
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Exists
